--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "xareis-api",
-  "version": "1.0.0",
-  "description": "RESTful API for xareis project.",
-  "main": "server.js",
-  "repository": "https://github.com/ciless/xareis-api",
-  "author": "ciless",
-  "license": "MIT",
-  "private": true,
-  "devDependencies": {
-    "eslint": "^5.12.1"
-  },
-  "dependencies": {
-    "eslint-config-google": "^0.11.0"
-  }
+    "name": "xareis-api",
+    "version": "1.0.0",
+    "description": "RESTful API for xareis project.",
+    "main": "index.js",
+    "repository": "https://github.com/ciless/xareis-api",
+    "author": "ciless",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "dev": "nodemon",
+        "lint": "eslint app",
+        "lint:fix": "eslint --fix app"
+    },
+    "devDependencies": {
+        "eslint": "^5.12.1",
+        "nodemon": "^1.18.9"
+    },
+    "dependencies": {
+        "bcrypt": "^3.0.3",
+        "body-parser": "^1.18.3",
+        "crypto-js": "^3.1.9-1",
+        "dotenv": "^6.2.0",
+        "eslint-config-google": "^0.11.0",
+        "express": "^4.16.4",
+        "jsonwebtoken": "^8.4.0",
+        "mongoose": "^5.4.7",
+        "multer": "^1.4.1"
+    }
 }
