--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "eslint-config-google": "^0.11.0",
         "express": "^4.16.4",
         "jsonwebtoken": "^8.4.0",
+        "lodash": "^4.17.11",
         "mongoose": "^5.4.7",
         "morgan": "^1.9.1",
-        "multer": "^1.4.1"
+        "multer": "^1.4.1",
+        "randomstring": "^1.1.5"
     }
 }
