--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "nodemon": "^1.18.9"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "bcrypt": "^3.0.3",
         "body-parser": "^1.18.3",
         "crypto-js": "^3.1.9-1",
@@ -28,6 +29,7 @@
         "mongoose": "^5.4.7",
         "morgan": "^1.9.1",
         "multer": "^1.4.1",
+        "querystring": "^0.2.0",
         "randomstring": "^1.1.5"
     }
 }
