--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
         "lint:fix": "eslint --fix app"
     },
     "devDependencies": {
+        "babel-eslint": "^10.0.1",
         "chai": "^4.2.0",
         "chai-http": "^4.2.1",
         "eslint": "^5.12.1",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^3.0.1",
         "mocha": "^5.2.0",
-        "nodemon": "^1.18.9"
+        "nodemon": "^1.18.9",
+        "prettier": "^1.16.3"
     },
     "dependencies": {
         "axios": "^0.18.0",
