--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*.{js,jsx,ts,tsx,vue,scss,html,json}]
+[*.{js,jsx,ts,tsx,vue,scss,html,json, vue}]
 indent_style = space
 indent_size = 4
 end_of_line = lf
